--- a/Example/AFChatUISample/AFChatUISample/Base.lproj/Main.storyboard
+++ b/Example/AFChatUISample/AFChatUISample/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ygC-He-tuz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2vl-Ln-pi0">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -53,10 +53,97 @@
             </objects>
             <point key="canvasLocation" x="-1332" y="-1408"/>
         </scene>
+        <!--Login View Controller-->
+        <scene sceneID="5db-iV-LPe">
+            <objects>
+                <viewController id="2vl-Ln-pi0" customClass="LoginViewController" customModule="AFChatUISample" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="b5p-M0-xem"/>
+                        <viewControllerLayoutGuide type="bottom" id="pjg-nK-S5n"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5W5-Mj-H1R">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="user id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zx4-kf-Uvo">
+                                <rect key="frame" x="37" y="153" width="246" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="DPd-oE-TAM"/>
+                                    <constraint firstAttribute="width" constant="246" id="fDa-wD-8Kr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="user name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tBp-mS-98m">
+                                <rect key="frame" x="37" y="202" width="246" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="246" id="2KM-bH-XvU"/>
+                                    <constraint firstAttribute="height" constant="30" id="MYo-LU-VKN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Epq-1b-PfL">
+                                <rect key="frame" x="37" y="278" width="106" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="106" id="40V-M3-LO2"/>
+                                    <constraint firstAttribute="height" constant="30" id="y2K-uJ-4mK"/>
+                                </constraints>
+                                <state key="normal" title="Log out"/>
+                                <connections>
+                                    <action selector="leftButtonTapped:" destination="2vl-Ln-pi0" eventType="touchUpInside" id="JGG-qz-NdI"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QlK-Dp-zDi">
+                                <rect key="frame" x="177" y="278" width="106" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="YuY-yl-Vdu"/>
+                                    <constraint firstAttribute="width" constant="106" id="eEf-b5-bew"/>
+                                </constraints>
+                                <state key="normal" title="Continue"/>
+                                <connections>
+                                    <action selector="rightButtonTapped:" destination="2vl-Ln-pi0" eventType="touchUpInside" id="LYU-WZ-EHy"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rzg-rC-McC">
+                                <rect key="frame" x="120" y="49" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="HhX-oI-ehZ"/>
+                                    <constraint firstAttribute="height" constant="80" id="gMk-72-lL7"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QlK-Dp-zDi" firstAttribute="trailing" secondItem="tBp-mS-98m" secondAttribute="trailing" id="9Mv-G1-qZO"/>
+                            <constraint firstItem="zx4-kf-Uvo" firstAttribute="centerX" secondItem="5W5-Mj-H1R" secondAttribute="centerX" id="Ifh-cd-IEy"/>
+                            <constraint firstItem="zx4-kf-Uvo" firstAttribute="top" secondItem="rzg-rC-McC" secondAttribute="bottom" constant="24" id="VmL-vj-YAZ"/>
+                            <constraint firstItem="Epq-1b-PfL" firstAttribute="top" secondItem="tBp-mS-98m" secondAttribute="bottom" constant="46" id="ZKJ-LK-fYg"/>
+                            <constraint firstItem="rzg-rC-McC" firstAttribute="top" secondItem="b5p-M0-xem" secondAttribute="bottom" constant="29" id="akl-u8-boV"/>
+                            <constraint firstItem="rzg-rC-McC" firstAttribute="centerX" secondItem="5W5-Mj-H1R" secondAttribute="centerX" id="lBW-vP-dFp"/>
+                            <constraint firstItem="Epq-1b-PfL" firstAttribute="leading" secondItem="tBp-mS-98m" secondAttribute="leading" id="mgy-Xe-TTC"/>
+                            <constraint firstItem="tBp-mS-98m" firstAttribute="top" secondItem="zx4-kf-Uvo" secondAttribute="bottom" constant="19" id="roy-iD-Zad"/>
+                            <constraint firstItem="QlK-Dp-zDi" firstAttribute="top" secondItem="tBp-mS-98m" secondAttribute="bottom" constant="46" id="tbN-Ta-yai"/>
+                            <constraint firstItem="tBp-mS-98m" firstAttribute="centerX" secondItem="5W5-Mj-H1R" secondAttribute="centerX" id="xgJ-F9-BS4"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="leftButton" destination="Epq-1b-PfL" id="OAs-eG-cue"/>
+                        <outlet property="rightButton" destination="QlK-Dp-zDi" id="mO4-rP-0do"/>
+                        <outlet property="userAvatarImage" destination="rzg-rC-McC" id="LC5-u7-xXQ"/>
+                        <outlet property="userIDTextField" destination="zx4-kf-Uvo" id="R2e-KC-QO3"/>
+                        <outlet property="userNameTextField" destination="tBp-mS-98m" id="jEr-Jn-MWs"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ifu-we-75l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2763" y="-1231"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="ohR-J3-0UG">
             <objects>
-                <tabBarController id="ygC-He-tuz" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabbarController" id="ygC-He-tuz" sceneMemberID="viewController">
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="zrM-N1-Xhw">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
