--- a/Example/AFChatUISample/AFChatUISample/Base.lproj/Main.storyboard
+++ b/Example/AFChatUISample/AFChatUISample/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Profile-->
@@ -127,36 +128,6 @@
             </objects>
             <point key="canvasLocation" x="-1849" y="-1069"/>
         </scene>
-        <!--Root View Controller-->
-        <scene sceneID="wgB-3H-Dmo">
-            <objects>
-                <tableViewController id="85k-WF-aZh" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="0d0-IP-4XL">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="o1k-ga-BHo">
-                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="o1k-ga-BHo" id="cuJ-6z-aNk">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="85k-WF-aZh" id="YV1-YM-Cfs"/>
-                            <outlet property="delegate" destination="85k-WF-aZh" id="Djj-Kg-dWi"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="Pld-UQ-eiT"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="KnL-mC-vSR" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-901" y="-5"/>
-        </scene>
         <!--Game-->
         <scene sceneID="uMO-We-waI">
             <objects>
@@ -168,12 +139,96 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="85k-WF-aZh" kind="relationship" relationship="rootViewController" id="Cnc-ge-Uds"/>
+                        <segue destination="SHG-dk-KfQ" kind="relationship" relationship="rootViewController" id="GLs-JM-Sym"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Nl-1o-HnK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1332" y="-5"/>
+        </scene>
+        <!--Game Starter View Controller-->
+        <scene sceneID="ooY-O1-VnB">
+            <objects>
+                <viewController id="SHG-dk-KfQ" customClass="GameStarterViewController" customModule="AFChatUISample" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="zWP-Eq-95k"/>
+                        <viewControllerLayoutGuide type="bottom" id="Zl2-YU-CeJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KGw-3f-Nf9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gn2-ay-iDY">
+                                <rect key="frame" x="109" y="269" width="102" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Knb-i3-cNB"/>
+                                    <constraint firstAttribute="width" constant="102" id="VNK-uE-Arl"/>
+                                </constraints>
+                                <state key="normal" title="See Live Game"/>
+                                <connections>
+                                    <segue destination="RvY-Jz-LmA" kind="show" id="D9X-KA-yvN"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Gn2-ay-iDY" firstAttribute="centerX" secondItem="KGw-3f-Nf9" secondAttribute="centerX" id="0VE-fF-2Wb"/>
+                            <constraint firstItem="Gn2-ay-iDY" firstAttribute="centerY" secondItem="KGw-3f-Nf9" secondAttribute="centerY" id="J4y-j7-aox"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Q6u-kl-EuB"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PRd-6b-cJO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-935" y="-5"/>
+        </scene>
+        <!--Live Game View Controller-->
+        <scene sceneID="y4o-I4-VbC">
+            <objects>
+                <viewController id="RvY-Jz-LmA" customClass="LiveGameViewController" customModule="AFChatUISample" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BRy-lt-kwj"/>
+                        <viewControllerLayoutGuide type="bottom" id="04S-mR-pb5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="OSH-32-fFE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gc_screen" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kpL-Dt-thQ">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t2u-QX-4gz">
+                                <rect key="frame" x="269" y="127" width="35" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="35" id="d3J-1s-nuj"/>
+                                    <constraint firstAttribute="height" constant="35" id="eBI-Wd-B0b"/>
+                                </constraints>
+                                <state key="normal" image="chat"/>
+                                <connections>
+                                    <action selector="chatButtonTapped:" destination="RvY-Jz-LmA" eventType="touchUpInside" id="313-Ab-JIE"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="kpL-Dt-thQ" secondAttribute="bottom" id="2nn-a8-jgY"/>
+                            <constraint firstItem="t2u-QX-4gz" firstAttribute="trailing" secondItem="OSH-32-fFE" secondAttribute="trailingMargin" id="8Qa-iI-dKD"/>
+                            <constraint firstItem="kpL-Dt-thQ" firstAttribute="leading" secondItem="OSH-32-fFE" secondAttribute="leading" id="9WX-37-Ath"/>
+                            <constraint firstItem="t2u-QX-4gz" firstAttribute="top" secondItem="BRy-lt-kwj" secondAttribute="bottom" constant="63" id="CLq-LK-ZN2"/>
+                            <constraint firstAttribute="trailing" secondItem="kpL-Dt-thQ" secondAttribute="trailing" id="fFx-6s-bIg"/>
+                            <constraint firstItem="kpL-Dt-thQ" firstAttribute="top" secondItem="OSH-32-fFE" secondAttribute="top" id="oaW-p3-eZt"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="91p-ei-d45"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="chatButton" destination="t2u-QX-4gz" id="Jad-mg-m0Q"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xca-Da-tuq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-535" y="-5"/>
         </scene>
         <!--Search-->
         <scene sceneID="paO-lH-xiE">
@@ -240,4 +295,8 @@
             <point key="canvasLocation" x="-901" y="-709"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="chat" width="41" height="41"/>
+        <image name="gc_screen" width="750" height="1334"/>
+    </resources>
 </document>
