--- a/Source/Views&Controllers/Chat/HCChatVideoTableViewCell.xib
+++ b/Source/Views&Controllers/Chat/HCChatVideoTableViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HCChatImageTableViewCell" rowHeight="172" id="KGk-i7-Jjw" customClass="HCChatTableViewCell" customModule="AppFriendsUI" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HCChatVideoTableViewCell" rowHeight="172" id="KGk-i7-Jjw" customClass="HCChatTableViewCell" customModule="AppFriendsUI" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="172"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -23,7 +23,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vyd-JF-wiE">
-                        <rect key="frame" x="35" y="143" width="110" height="14"/>
+                        <rect key="frame" x="169" y="143" width="110" height="14"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="14" id="FLJ-pq-ctu"/>
                             <constraint firstAttribute="width" constant="110" id="jtX-oW-Yfz"/>
@@ -33,15 +33,15 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="E4M-YU-06K">
-                        <rect key="frame" x="49" y="8" width="100" height="130"/>
-                        <color key="backgroundColor" red="0.40114350560000001" green="0.40114350560000001" blue="0.40114350560000001" alpha="0.61004118220000003" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="49" y="8" width="230" height="130"/>
+                        <color key="backgroundColor" red="0.40114350558659206" green="0.40114350558659206" blue="0.40114350558659206" alpha="0.61004118220000003" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="100" id="7gK-Cd-UKL"/>
+                            <constraint firstAttribute="width" constant="230" id="7gK-Cd-UKL"/>
                             <constraint firstAttribute="height" constant="130" id="gek-m0-Lfz"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ifc-pZ-2VG">
-                        <rect key="frame" x="157" y="61" width="24" height="24"/>
+                        <rect key="frame" x="287" y="61" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="24" id="bhB-qe-klK"/>
                             <constraint firstAttribute="height" constant="24" id="eCT-QE-q0I"/>
@@ -50,6 +50,17 @@
                             <action selector="resendButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="olV-Q2-9MK"/>
                         </connections>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gt9-q9-MMi">
+                        <rect key="frame" x="139" y="48" width="50" height="50"/>
+                        <color key="backgroundColor" white="1" alpha="0.5" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="2uA-en-6Sv"/>
+                            <constraint firstAttribute="width" constant="50" id="fFT-nv-S80"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <color key="backgroundColor" red="0.23137254900000001" green="0.3411764706" blue="0.61568627450000002" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
@@ -57,10 +68,12 @@
                     <constraint firstItem="E4M-YU-06K" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="9pX-yC-o42"/>
                     <constraint firstItem="ifc-pZ-2VG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="53" id="SXr-ks-ubQ"/>
                     <constraint firstItem="E4M-YU-06K" firstAttribute="leading" secondItem="XGy-dV-sbG" secondAttribute="trailing" constant="16" id="UuB-Ks-jy8"/>
-                    <constraint firstItem="Vyd-JF-wiE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="27" id="Vdx-ZX-ggA"/>
                     <constraint firstItem="ifc-pZ-2VG" firstAttribute="leading" secondItem="E4M-YU-06K" secondAttribute="trailing" constant="8" id="WaG-KL-eiO"/>
+                    <constraint firstItem="gt9-q9-MMi" firstAttribute="centerY" secondItem="E4M-YU-06K" secondAttribute="centerY" id="WuJ-dV-go4"/>
+                    <constraint firstItem="Vyd-JF-wiE" firstAttribute="trailing" secondItem="E4M-YU-06K" secondAttribute="trailing" id="bjd-r6-g5Z"/>
                     <constraint firstItem="XGy-dV-sbG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="sgx-Lx-iIu"/>
                     <constraint firstAttribute="bottomMargin" secondItem="Vyd-JF-wiE" secondAttribute="bottom" constant="6.5" id="u8Y-f6-tzV"/>
+                    <constraint firstItem="gt9-q9-MMi" firstAttribute="centerX" secondItem="E4M-YU-06K" secondAttribute="centerX" id="z3P-Rm-Koj"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -68,6 +81,7 @@
                 <outlet property="failedButton" destination="ifc-pZ-2VG" id="jiQ-fE-0Wd"/>
                 <outlet property="timeLabel" destination="Vyd-JF-wiE" id="dId-yF-rUb"/>
                 <outlet property="userAvatarImageView" destination="XGy-dV-sbG" id="V5a-qE-G34"/>
+                <outlet property="videoPlayIcon" destination="gt9-q9-MMi" id="3wD-rT-A17"/>
             </connections>
             <point key="canvasLocation" x="288" y="326"/>
         </tableViewCell>
